# Kata-barcodes

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md
src/: main.rs
src/core/generators/: mod.rs
src/core/generators/barcodes/: base.rs  generators.rs  mod.rs  proxy.rs
src/core/generators/images/: base.rs  generators.rs  proxy.rs
src/domain/inbound/: generation.rs  mod.rs
src/domain/outbound/: error.rs  generation.rs  generation_response.rs  list.rs  mod.rs
src/infrastructure/http/: cors.rs  mod.rs
src/infrastructure/http/controllers/: img.rs  json.rs  list.rs  mod.rs  raw.rs
src/infrastructure/http/routes/: index.rs
src/shared/: checkers.rs  commons.rs  crypto.rs  mod.rs
