[package]
name = "kata-barcode"
version = "0.1.0"
edition = "2021"

[dependencies]
barcoders = {version = "2.0.0", features = ["image", "svg"]}
base64 = "0.22.1"
salvo = { version = "0.74.2", features=["cors"] }
salvo-oapi = "0.74.2"
serde = {version = "1.0.215", features = ["derive"]}
serde_json = "1.0.133"
sha2 = "0.10.8"
tokio = {version = "1.42.0", features = ["full"]}

[[bin]]
name = "kata-barcode"
path = "src/main.rs"
